--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
   </head>
 
   <body>
-    <header class="p-5 mb-4 border-5 border-bottom border-dark text-center">
+    <header class="p-2 mb-4 border-5 border-bottom border-dark text-center">
       <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
+      <p class="lead mb-1">A simple calendar app for scheduling your work day</p>
+      <p id="current-day" class="lead"></p>
     </header>
     <div class="container-lg px-5" id="timeForm">
       <!-- Use class for "past", "present", and "future" to apply styles to the
